# saidso

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
Docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  saidso-feedback.md
examples/: quickstart.py
saidso/: __init__.py  attestation.py  cli.py  context.py  grounding.py  observe.py  policy.py  provenance.py  result.py  speech.py
saidso/_docs/: changelog.md  observability.md  overview.md  policies.md  reads.md  writes.md
saidso/_matching/: __init__.py  fuzz.py  locale.py  matcher.py  normalize.py
saidso/_templates/: GETTING_STARTED.md
saidso/speech/: __init__.py  monitor.py  reconcile.py  render.py
scripts/: bench_latency.py  deploy.py
tests/: test_cli.py  test_feedback_v050.py  test_feedback_v050_edges.py  test_hardening.py
