[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saidso"
dynamic = ["version"]
description = "A grounding firewall for action-taking AI agents: refuse any tool argument the user never actually said, with a transcript-linked audit trail."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Karthik Rommula" }]
keywords = [
    "ai", "agents", "voice", "guardrails", "grounding", "hallucination",
    "tool-use", "llm", "provenance", "audit", "firewall",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = []  # zero required deps; rapidfuzz used if present

[project.optional-dependencies]
fast = ["rapidfuzz>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "rapidfuzz>=3.0",
    "ruff>=0.6",
    "mypy>=1.8",
    "bandit>=1.7",
    "pip-audit>=2.7",
]

# No GitHub repo — the PyPI project page (rendered from README.md) is the home.
[project.urls]
Homepage = "https://pypi.org/project/saidso/"

[project.scripts]
saidso = "saidso.cli:main"

[tool.hatch.version]
# Single source of truth: keep the version only in saidso/__init__.py.
path = "saidso/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["saidso"]
# Bundle the data the CLI serves: quickstart templates + `saidso docs` topics.
include = ["saidso/_templates/*", "saidso/_docs/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=saidso --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["saidso"]
omit = ["saidso/_templates/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["saidso/_templates"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["B008", "SIM105"]

[tool.mypy]
# 3.10 is mypy's minimum analysis target; runtime support stays 3.9 via
# `from __future__ import annotations` (ruff enforces py39 syntax separately).
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Keep the bug-catching strict checks (return-any, implicit-optional, type-args)
# but don't mandate annotations on every private helper — that is style, not
# safety, and the public API is fully typed (ships py.typed).
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
exclude = ["saidso/_templates", "tests"]

[[tool.mypy.overrides]]
module = ["rapidfuzz.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "saidso/_templates"]
